fixed notes formatting bug and allow for more than one root word/lang
adding 'hush' word comes loosely from a couple languages so it can now list them and their words separated by /. Also notes overflowing because of incorrect formatting stuff so I fixed that

--- a/style/dict_entry_style.css
+++ b/style/dict_entry_style.css
@@ -49,9 +49,8 @@
 .notes {
     font-size: var(--mini);
     color: Grey;
-}
-
-.spacer {
+    white-space: normal;
+    display: block;
     margin-top: var(--midSize);
 }
 
